--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -25,6 +25,7 @@
                         </div>
                         <div class="alert alert-danger" role="alert" *ngIf="password.invalid && password.touched">
                             <span *ngIf="password.errors?.['required']" >Password is required</span>
+                            <span *ngIf="password.errors?.['weakPassword'] && !password.errors?.['required']" >Password too weak</span>
                         </div>
                         <div class="form-group">
                             <label for="password">Confirm Password</label>
