--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -9,45 +9,33 @@
                     </div>
                 </div>
                 <div class="login-form card-body">
+                    <div class="alert alert-danger" role="alert" *ngIf="!signUpState">
+                        <span>SignUp Failed, please try again.</span>
+                    </div>
                     <form [formGroup]="signUpForm" (ngSubmit)="onSignUp()">
                         <div class="form-group">
-                            <!--The "for" attribute of the label should be pointing to an input with that ID
-                              i.e.
-                              <label for="email">Email</label>
-                              <input id="email" class="form-control"  type="text" formControlName="email" name="email" placeholder="Enter your Username">
-                             -->
-                            <label for="username">Email</label>
+                            <label for="email">Email</label>
                             <!--
                             Here i tend to, instead of formControlName, to use the formControl directly, so it can be
                             easily accessed from the template.
                             -->
-                            <input class="form-control"  type="text" formControlName="email" name="email" placeholder="Enter your Username">
+                            <input id="email" class="form-control"  type="text" formControlName="email" name="email" placeholder="Enter your email">
                         </div>
                         <div class="alert alert-danger" role="alert" *ngIf="email.invalid && email.touched">
                             <span *ngIf="email.errors?.['required']" >Email is required</span>
                             <span *ngIf="email.errors?.['email']" >Wrong email format</span>
-                            <span *ngIf="email.errors?.['emailExist']" >Email already exist</span>
+                            <!-- <span *ngIf="email.errors?.['emailExist']" >Email already exist</span> -->
                         </div>
                         <div class="form-group">
-                            <!--The "for" attribute of the label should be pointing to an input with that ID
-                              i.e.
-                              <label for="password">Email</label>
-                              <input id="password" class="form-control" type="password" formControlName="password" name="password" placeholder="Enter your Password">
-                             -->
                             <label for="password">Password</label>
-                            <input class="form-control" type="password" formControlName="password" name="password" placeholder="Enter your Password">
+                            <input id="password" class="form-control" type="password" formControlName="password" name="password" placeholder="Enter your Password">
                         </div>
                         <div class="alert alert-danger" role="alert" *ngIf="password.invalid && password.touched">
                             <span *ngIf="password.errors?.['required']" >Password is required</span>
                         </div>
                         <div class="form-group">
-                          <!--The "for" attribute of the label should be pointing to an input with that ID
-                              i.e.
-                              <label for="password">Email</label>
-                              <input class="form-control" type="password" formControlName="passwordConfirm" name="password" placeholder="Enter your Password">
-                             -->
                             <label for="password">Confirm Password</label>
-                            <input class="form-control" type="password" formControlName="passwordConfirm" name="password" placeholder="Enter your Password">
+                            <input id="password" class="form-control" type="password" formControlName="passwordConfirm" name="password" placeholder="Enter your Password">
                         </div>
                         <div class="alert alert-danger" role="alert" *ngIf="passwordConfirm.invalid && passwordConfirm.touched || signUpForm.errors?.['dontMatch']">
                             <span *ngIf="passwordConfirm.errors?.['required']" >Password is required</span>
