--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -10,7 +10,7 @@
                 </div>
                 <div class="login-form card-body">
                     <div class="alert alert-danger" role="alert" *ngIf="!signUpState">
-                        <span>SignUp Failed, please try again.</span>
+                        <span>SignUp Failed, please try again</span>
                     </div>
                     <form [formGroup]="signUpForm" (ngSubmit)="onSignUp()">
                         <div class="form-group">
