--- a/src/app/dashboard/views/console/console.component.scss
+++ b/src/app/dashboard/views/console/console.component.scss
@@ -1,9 +1,9 @@
 .console {
-    height: 95vh;
     background-color: #F6F8FA;
 }
 
 #main-bar {
+    height: 90vh;
     .main-bar-header {
         .navbar-brand {
             img {
@@ -29,6 +29,7 @@
         }
     }
     .main-bar-body {
+        overflow-y: auto;
         ul {
             list-style: none;
             padding: 0;
@@ -66,6 +67,8 @@
 #release-bar {
     border-left: 1px solid #D0D7DE;
     border-right: 1px solid #D0D7DE;
+    animation-name: releaseBarSlide;
+    animation-duration: 0.5s;
     .release-bar-header {
         .bar-header-title {
             font-size: 2rem;
@@ -77,12 +80,39 @@
             list-style: none;
             padding: 0;
             margin: 0;
-            .release-title {
-                padding: 5px;
-                font-size: 1.2rem;
-                font-weight: 600;
+            .release-version {
+                .release-version-title, .release-version-menu {
+                    padding: 5px;
+                    font-size: 1.2rem;
+                    font-weight: 600;
+                    color: #414141;
+                }
+
+                .release-version-title {
+                    input {
+                        display: inline;
+                        font-size: 1.2rem;
+                        font-weight: 600;
+                        color: #414141;
+                        background-color: transparent;
+                        width: 100%;
+                        border: 0;
+                    }
+
+                    input:hover, input:focus {
+                        border: 0;
+                        outline: 0;
+                    }
+                }
+
+                .release-version-menu {
+                    text-decoration: none;
+                }
+                .release-version-menu:hover {
+                    color: #999999;
+                }
             }
-            .release-title-active {
+            .release-version-active {
                 background-color: #de4c3694;
             }
         }
@@ -96,6 +126,8 @@
 }
 
 #console {
+    height: 90vh;
+    overflow-y: auto;
     .console-release {
         .console-release-title {
             padding: 5px;
@@ -118,6 +150,7 @@
         }
     }
     .console-commits {
+        overflow-y: auto;
         .console-commits-title {
             font-size: 2rem;
         }
@@ -141,5 +174,19 @@
         .btn-commit {
             height: 50px;
         }
+    }
+}
+
+
+/* Animations */
+
+@keyframes releaseBarSlide {
+    from {
+        transform:scaleX(0);
+        transform-origin:left;
+    }
+    to {
+        transform:scaleX(1);
+        transform-origin:left;
     }
 }
