--- a/src/app/dashboard/views/console/console.component.scss
+++ b/src/app/dashboard/views/console/console.component.scss
@@ -1,5 +1,5 @@
 .console {
-    background-color: #F6F8FA;
+    background-color: #f6f8fa;
 }
 
 #main-bar {
@@ -16,7 +16,7 @@
             }
         }
         .btn-profile {
-            border: 4px solid #DE4C36;
+            border: 4px solid #de4c36;
             border-radius: 50%;
             overflow: hidden;
             width: 64px;
@@ -65,8 +65,8 @@
 }
 
 #release-bar {
-    border-left: 1px solid #D0D7DE;
-    border-right: 1px solid #D0D7DE;
+    border-left: 1px solid #d0d7de;
+    border-right: 1px solid #d0d7de;
     animation-name: releaseBarSlide;
     animation-duration: 0.5s;
     .release-bar-header {
@@ -76,12 +76,13 @@
         }
     }
     .release-bar-body {
-        ul{
+        ul {
             list-style: none;
             padding: 0;
             margin: 0;
             .release-version {
-                .release-version-title, .release-version-menu {
+                .release-version-title,
+                .release-version-menu {
                     padding: 5px;
                     font-size: 1.2rem;
                     font-weight: 600;
@@ -99,7 +100,8 @@
                         border: 0;
                     }
 
-                    input:hover, input:focus {
+                    input:hover,
+                    input:focus {
                         border: 0;
                         outline: 0;
                     }
@@ -132,7 +134,7 @@
         .console-release-title {
             padding: 5px;
             font-size: 1.2rem;
-            font-weight: 600;   
+            font-weight: 600;
         }
         .console-release-description {
             textarea {
@@ -144,8 +146,8 @@
             .embed-content {
                 width: 100px;
                 height: 100px;
-                background-color: #DE4C36;
-                color: #FFFFFF;
+                background-color: #de4c36;
+                color: #ffffff;
             }
         }
     }
@@ -165,9 +167,9 @@
             .console-commits-embed {
                 width: 100px;
                 height: 100px;
-                background-color: #DE4C36;
+                background-color: #de4c36;
                 .embed-content {
-                    color: #FFFFFF;
+                    color: #ffffff;
                 }
             }
         }
@@ -177,16 +179,99 @@
     }
 }
 
-
 /* Animations */
 
 @keyframes releaseBarSlide {
     from {
-        transform:scaleX(0);
-        transform-origin:left;
+        transform: scaleX(0);
+        transform-origin: left;
     }
     to {
-        transform:scaleX(1);
-        transform-origin:left;
+        transform: scaleX(1);
+        transform-origin: left;
+    }
+}
+
+.loader {
+    font-size: 10px;
+    margin: 50px auto;
+    text-indent: -9999em;
+    width: 11em;
+    height: 11em;
+    border-radius: 50%;
+    background: #de4c36;
+    background: -moz-linear-gradient(
+        left,
+        #de4c36 10%,
+        rgba(255, 255, 255, 0) 42%
+    );
+    background: -webkit-linear-gradient(
+        left,
+        #de4c36 10%,
+        rgba(255, 255, 255, 0) 42%
+    );
+    background: -o-linear-gradient(
+        left,
+        #de4c36 10%,
+        rgba(255, 255, 255, 0) 42%
+    );
+    background: -ms-linear-gradient(
+        left,
+        #de4c36 10%,
+        rgba(255, 255, 255, 0) 42%
+    );
+    background: linear-gradient(
+        to right,
+        #de4c36 10%,
+        rgba(255, 255, 255, 0) 42%
+    );
+    position: relative;
+    -webkit-animation: load3 1.4s infinite linear;
+    animation: load3 1.4s infinite linear;
+    -webkit-transform: translateZ(0);
+    -ms-transform: translateZ(0);
+    transform: translateZ(0);
+}
+.loader:before {
+    width: 50%;
+    height: 50%;
+    background: #de4c36;
+    border-radius: 100% 0 0 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    content: "";
+}
+.loader:after {
+    background: #f6f8fa;
+    width: 75%;
+    height: 75%;
+    border-radius: 50%;
+    content: "";
+    margin: auto;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+}
+@-webkit-keyframes load3 {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
+@keyframes load3 {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
     }
 }
