edit release feature update

--- a/src/app/dashboard/views/console/console.component.html
+++ b/src/app/dashboard/views/console/console.component.html
@@ -24,7 +24,7 @@
     </div>
     <ng-template #consoleApp >
         <p-confirmDialog header="Confirmation" icon="pi pi-exclamation-triangle"></p-confirmDialog>
-    <div class="row w-100 pl-5 pt-5">
+    <div class="row w-100 pl-2 pt-4 flex-nowrap">
         <div id="main-bar" class="col-lg-2 d-flex flex-column">
             <div class="main-bar-header">
                 <div class="d-flex justify-content-around align-items-center">
@@ -159,189 +159,8 @@
                 </button>
             </div>
         </div>
-        <app-releases-board class="col-lg-2" *ngIf="releaseBarActive" [activeWorkspace]="activeWorkspace" ></app-releases-board>
-        <div id="console" class="col-lg-8">
-            <div class="container">
-                <div class="console-release m-5">
-                    <div class="console-release-title">
-                        <fa-icon class="pr-3" [icon]="releasesVersion"></fa-icon>
-                        <span>0.2.1</span>
-                    </div>
-                    <div class="d-flex align-items-start">
-                        <div class="console-release-description flex-grow-1">
-                            <textarea name="" id="" cols="30" rows="10">
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus animi sapiente perferendis expedita odio est sunt, quod rem, dolores non quia illo ipsa maiores, eligendi sed accusamus ipsum vel dolorem.
-                            </textarea>
-                            <span>x/x</span>
-                        </div>
-                        <div
-                            class="
-                                console-release-embed
-                                d-flex
-                                flex-column
-                                justify-content-center
-                                align-items-center
-                                mx-4
-                            "
-                        >
-                            <div
-                                class="
-                                    embed-content
-                                    d-flex
-                                    flex-column
-                                    justify-content-center
-                                    align-items-center
-                                "
-                            >
-                                <fa-icon [icon]="actionPlay"></fa-icon>
-                                <span>Video</span>
-                            </div>
-                            <span>Change</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="console-commits m-5">
-                    <h2 class="console-commits-title">Commits</h2>
-                    <div
-                        class="
-                            console-commits-container
-                            d-flex
-                            align-items-center
-                            mb-4
-                        "
-                    >
-                        <div class="commits-feature flex-grow-1">
-                            <span
-                                class="
-                                    commits-feature-title
-                                    dropdown-toggle
-                                    m-4
-                                "
-                                >Feature</span
-                            >
-                        </div>
-                        <div
-                            class="
-                                console-commits-embed
-                                d-flex
-                                flex-column
-                                justify-content-center
-                                align-items-center
-                            "
-                            (click)="addAction();"
-                        >
-                            <div
-                                class="
-                                    embed-content
-                                    d-flex
-                                    flex-column
-                                    justify-content-center
-                                    align-items-center
-                                "
-                            >
-                                <fa-icon [icon]="actionPlay"></fa-icon>
-                                <span>Add Action</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div
-                        class="
-                            console-commits-container
-                            d-flex
-                            align-items-center
-                            mb-4
-                        "
-                    >
-                        <div class="commits-feature flex-grow-1">
-                            <span
-                                class="
-                                    commits-feature-title
-                                    dropdown-toggle
-                                    m-4
-                                "
-                                >Feature</span
-                            >
-                        </div>
-                        <div
-                            class="
-                                console-commits-embed
-                                d-flex
-                                flex-column
-                                justify-content-center
-                                align-items-center
-                            "
-                        >
-                            <div
-                                class="
-                                    embed-content
-                                    d-flex
-                                    flex-column
-                                    justify-content-center
-                                    align-items-center
-                                "
-                            >
-                                <fa-icon [icon]="actionPlay"></fa-icon>
-                                <span>Add Action</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div
-                        class="
-                            console-commits-container
-                            d-flex
-                            align-items-center
-                            mb-4
-                        "
-                    >
-                        <div class="commits-feature flex-grow-1">
-                            <span
-                                class="
-                                    commits-feature-title
-                                    dropdown-toggle
-                                    m-4
-                                "
-                                >Feature</span
-                            >
-                        </div>
-                        <div
-                            class="
-                                console-commits-embed
-                                d-flex
-                                flex-column
-                                justify-content-center
-                                align-items-center
-                            "
-                        >
-                            <div
-                                class="
-                                    embed-content
-                                    d-flex
-                                    flex-column
-                                    justify-content-center
-                                    align-items-center
-                                "
-                            >
-                                <fa-icon [icon]="actionPlay"></fa-icon>
-                                <span>Add Action</span>
-                            </div>
-                        </div>
-                    </div>
-                    <button
-                        type="button"
-                        class="
-                            btn btn-brand-primary btn-commit
-                            rounded-0
-                            d-flex
-                            justify-content-center
-                            align-items-center
-                            w-100
-                        "
-                    >
-                        <fa-icon [icon]="addCommit"></fa-icon>
-                    </button>
-                </div>
-            </div>
-        </div>
+        <app-releases-board class="col-lg-2 p-0" *ngIf="releaseBarActive" (featureBoard)="showFeatureBoard( $event );" [activeWorkspace]="activeWorkspace" ></app-releases-board>
+        <app-features-board class="col-lg-8" *ngIf="featureBoardActive" (callAddAction)="addAction();" [releaseAction]="releaseAction" [activeRelease]="activeRelease" [activeWorkspace]="activeWorkspace" ></app-features-board>
     </div>
     </ng-template>
 </div>
