--- a/src/app/dashboard/views/console/console.component.scss
+++ b/src/app/dashboard/views/console/console.component.scss
@@ -4,6 +4,7 @@
 
 #main-bar {
     height: 90vh;
+    min-width: 255px;
     .main-bar-header {
         .navbar-brand {
             img {
@@ -60,58 +61,6 @@
     .main-bar-footer {
         .btn-footer {
             width: 100%;
-        }
-    }
-}
-
-#console {
-    height: 90vh;
-    overflow-y: auto;
-    .console-release {
-        .console-release-title {
-            padding: 5px;
-            font-size: 1.2rem;
-            font-weight: 600;
-        }
-        .console-release-description {
-            textarea {
-                width: 100%;
-                height: 100px;
-            }
-        }
-        .console-release-embed {
-            .embed-content {
-                width: 100px;
-                height: 100px;
-                background-color: #de4c36;
-                color: #ffffff;
-            }
-        }
-    }
-    .console-commits {
-        overflow-y: auto;
-        .console-commits-title {
-            font-size: 2rem;
-        }
-        .console-commits-container {
-            background-color: #eee4e1;
-            .commits-feature {
-                .commits-feature-title {
-                    font-size: 1.1rem;
-                    font-weight: 600;
-                }
-            }
-            .console-commits-embed {
-                width: 100px;
-                height: 100px;
-                background-color: #de4c36;
-                .embed-content {
-                    color: #ffffff;
-                }
-            }
-        }
-        .btn-commit {
-            height: 50px;
         }
     }
 }
